--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
         <label for="bill_amount" class="cash_amount">Bill Amount:</label>
         <input type="text" id="bill_amount" name="bill_amount" placeholder="Enter the bill amount" /><br>
 
-        <button type="button" id="next_btn">Next</button>
+        <label for="cash_given" id="hide_cash_given" class="cash_amount">Cash Given:</label>
+        <input type="text" id="cash_given" name="cash_given" />
 
-        <!-- <label for="cash_to_be_given" class="hide_cash_given">Cash Given:</label>
-        <input type="text" id="cash_to_be_given" name="cash_to_be_given" /> -->
+        <button type="button" id="submit_btn">Check</button>
+        <p id="demo"></p>
     </form>
+  
     
     <script src="script.js"></script>
     
