--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cash Register</title>
     <link href="style.css" rel="stylesheet">
+    <script src="math.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="header">
@@ -22,7 +23,34 @@
 
         <button type="button" id="submit_btn">Check</button>
         <p id="demo"></p>
+        <h3 id="currency_heading"></h3>
+        <p id="demo1"></p>
     </form>
+
+    <table>
+        <tr>
+            <th>Number of notes to return</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>Notes Available</th>
+            <td>1</td>
+            <td>5</td>
+            <td>10</td>
+            <td>20</td>
+            <td>100</td>
+            <td>500</td>
+            <td>2000</td>
+        </tr>
+    </table>
+
+    <div style="height: 8vh"></div>
   
     
     <script src="script.js"></script>
