added class to table

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cash Register</title>
     <link href="style.css" rel="stylesheet">
-    <script src="math.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="header">
@@ -22,23 +21,22 @@
         <input type="text" id="cash_given" name="cash_given" />
 
         <button type="button" id="submit_btn">Check</button>
-        <p id="demo"></p>
         <h3 id="currency_heading"></h3>
-        <p id="demo1"></p>
+        <p id="demo"></p>
     </form>
 
-    <table>
-        <tr>
+    <table class="table">
+        <tr class="table_notes_required">
             <th>Number of notes to return</th>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td id="demo1"></td>
+            <td id="demo2"></td>
+            <td id="demo3"></td>
+            <td id="demo4"></td>
+            <td id="demo5"></td>
+            <td id="demo6"></td>
+            <td id="demo7"></td>
         </tr>
-        <tr>
+        <tr class="table_notes_available">
             <th>Notes Available</th>
             <td>1</td>
             <td>5</td>
