refactor: added id to table

--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
         <input type="text" id="cash_given" name="cash_given" />
 
         <button type="button" id="submit_btn">Check</button>
-        <h3 id="currency_heading"></h3>
         <p id="demo"></p>
     </form>
 
-    <table class="table">
+    <table id="table">
         <tr class="table_notes_required">
             <th>Number of notes to return</th>
             <td id="demo1"></td>
