--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
     </table>
 
 
+    <p id="error"></p>
+
     <section class="footer">
         <ul class="footer_list">
             <li><a href="https://github.com/Akanksha108"><img src="./images/github.png" class="footer_img" /></a></li>
