--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
         <div class="main_form">
             <form class="cash">
                 <label for="bill_amount" class="cash_amount">Bill Amount:</label>
-                <input type="text" id="bill_amount" name="bill_amount" placeholder="Enter the bill amount" /><br>
+                <input type="number" id="bill_amount" name="bill_amount" placeholder="Enter the bill amount" /><br>
         
                 <label for="cash_given" id="hide_cash_given" class="cash_amount">Cash Given:</label>
-                <input type="text" id="cash_given" name="cash_given" />
+                <input type="number" id="cash_given" name="cash_given" />
         
                 <button type="button" id="submit_btn">Check</button>
-                <p id="demo"></p>
             </form>
         </div>
     </div>
